# TURTLE

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README  control_signals.json  generate_mc_tables.py  microcode_descriptor.json
asm/: .gitignore
asm/tests/branch/: branch.s
asm/tests/jal/: jal.s
asm/tests/load/: load.s
asm/tests/op-imm/: op-imm.s
c/: .gitignore  startup.ld  startup.s
c/test_lib/: test_lib.h
c/tests/: main.c
c/tests/counter/: counter.c
c/tests/csr/: csr.c
sim/: CMakeLists.txt  alu_sim.v  core_sim.v  csr_reg_sim.v  reg_file_sim.v
sim/src/: dut.cpp  dut.hpp  main.cpp
src/: CMakeLists.txt  alu.v  control_unit.v  core.v  csr_reg.v  pc.v  reg_file.v
src/microcode/: CMakeLists.txt  control_signals.json  generate_mc_tables.py  microcode_descriptor.json  verilog_gen.py
src/src/: alu.v  control_unit.v  core.v  pc.v  reg_file.sv
src/src/execute/: alu.sv  execute_alu.sv  execute_branch.sv  execute_csr.sv  execute_ecall.sv  execute_fence.sv  execute_jump.sv  execute_load.sv  execute_shift.sv  execute_store.sv
src/src/pipeline/: commit.sv  decode.sv  decode_inst.sv  execute.sv  hold.sv  instruction_fetch.sv  pipeline.sv  read_registers.sv
src/src/test/: alu_tester.sv  branch_tester.sv  jump_tester.sv  load_tester.sv  store_tester.sv
src/src/utils/: decoder.sv
src/tests/mod/: CMakeLists.txt  alu_tester.cpp  branch_tester.cpp  commit.cpp  decode.cpp  decode_inst.cpp  decoder.cpp  execute.cpp  execute_alu.cpp  execute_csr.cpp  execute_shift.cpp  hold.cpp  instruction_fetch_test.cpp  jump_tester.cpp  load_tester.cpp  mod_test.cpp  mod_test.hpp  pipeline.cpp  read_registers.cpp  reg_file.cpp  store_tester.cpp
src/tests/mod/instruction_fetch/: instruction_fetch_test.cpp
src/vcore_sim/: CMakeLists.txt  core_sim.cpp  simulation.cpp
tests/: CMakeLists.txt
tests/asm/tests/count/: count.s  op.s
tests/asm/tests/jalr/: jalr.s
tests/asm/tests/lui_auipc/: lui_auipc.s
tests/asm/tests/op/: op.s
tests/asm/tests/store/: store.s
tests/c/test_lib/: startup.ld  startup.s  test_lib.c  test_lib.h
tests/c/tests/csr/: csr.c
verilator/: core_sim.cpp  simulation.cpp  simulation.hpp
